--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
         "react-dom": "^18.2.0",
         "sass": "^1.56.1",
         "tailwindcss": "^3.2.1",
-        "vite": "^4.0.0"
+        "vite": "^4.0.0",
+        "vite-plugin-manifest": "^0.0.1"
     },
     "dependencies": {
         "@vitejs/plugin-react": "^3.0.1",
