--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "darryldecode/cart": "^4.2",
         "diglactic/laravel-breadcrumbs": "^8.0",
         "guzzlehttp/guzzle": "^7.2",
         "inertiajs/inertia-laravel": "^0.6.3",
@@ -19,6 +20,7 @@
         "pestphp/pest": "^1.16",
         "pestphp/pest-plugin-laravel": "^1.1",
         "pragmarx/google2fa-laravel": "^2.1",
+        "silviolleite/laravelpwa": "^2.0",
         "spatie/laravel-backup": "^8.1",
         "spatie/laravel-permission": "^5.10",
         "tightenco/ziggy": "^1.0"
