--- a/composer.json
+++ b/composer.json
@@ -16,11 +16,12 @@
         "laravel/socialite": "^5.6",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.2",
-        "laravelcollective/html": "^6.4",
         "pestphp/pest": "^1.16",
         "pestphp/pest-plugin-laravel": "^1.1",
         "pragmarx/google2fa-laravel": "^2.1",
+        "silviolleite/laravelpwa": "^2.0",
         "spatie/laravel-backup": "^8.1",
+        "spatie/laravel-html": "^3.2",
         "spatie/laravel-permission": "^5.10",
         "tightenco/ziggy": "^1.0"
     },
