--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/socialite": "^5.6",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.2",
+        "laravelcollective/html": "^6.4",
         "pestphp/pest": "^1.16",
         "pestphp/pest-plugin-laravel": "^1.1",
         "pragmarx/google2fa-laravel": "^2.1",
