--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:FQFVE+FYdF0OAKcncfLhPAFJ5h9WOdJ2Afzq1LT7+/A=
 APP_DEBUG=true
 APP_URL=http://localhost
 
