--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -31,7 +31,7 @@ on:
     branches: [ "master" ]
 
 env:
-  AWS_REGION: us-east-2a                   # set this to your preferred AWS region, e.g. us-west-1
+  AWS_REGION: us-east-2                  # set this to your preferred AWS region, e.g. us-west-1
   ECR_REPOSITORY: cachorropet           # set this to your Amazon ECR repository name
   ECS_SERVICE: MY_ECS_SERVICE                 # set this to your Amazon ECS service name
   ECS_CLUSTER: ClusterCachorroPET                 # set this to your Amazon ECS cluster name
