--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -33,7 +33,7 @@ on:
 env:
   AWS_REGION: us-east-2                  # set this to your preferred AWS region, e.g. us-west-1
   ECR_REPOSITORY: cachorropet           # set this to your Amazon ECR repository name
-  ECS_SERVICE: MY_ECS_SERVICE                 # set this to your Amazon ECS service name
+  ECS_SERVICE: aws-service                 # set this to your Amazon ECS service name
   ECS_CLUSTER: ClusterCachorroPET                 # set this to your Amazon ECS cluster name
   ECS_TASK_DEFINITION: ./tarea-1-revision1.json # set this to the path to your Amazon ECS task definition
                                               # file, e.g. .aws/task-definition.json
