--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -4,28 +4,22 @@ on:
   push:
     branches:
       - master
-  pull_request:
-    branches:
-      - master
 
 jobs:
-  tests:
+  test:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v2
-      - name: Install dependencies
-        run: composer install
-      - name: Setup PHP
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: 8.1
-          coverage: true
+          php-version: '8.1'
+
+      - name: Install dependencies
+        run: composer install
+
       - name: Run tests
-        env:
-          PATH: "$PATH:/c/xampp/php/phpunit"
-        run: phpunit --coverage-html=tests/coverage
-      - name: Upload coverage report
-        uses: actions/upload-artifact@v2
-        with:
-          name: coverage-report
-          path: tests/coverage
+        run: php artisan test
