--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "spatie/laravel-backup": "^8.1",
         "spatie/laravel-html": "^3.2",
         "spatie/laravel-permission": "^5.10",
+        "stripe/stripe-php": "^13.3",
         "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
